# eFX

./: .gitignore  PLAN.md  README.md  docker-compose.yml  start.sh
analytics/: pyproject.toml
analytics/notebooks/: efx_analysis.py
analytics/src/analytics/: alpha_model.py  drawdown.py  pnl.py  volume.py
config/: alpha.toml  pairs.toml  risk.toml  sessions.toml  tiers.toml  venues.toml
engine/: CMakeLists.txt
engine/app/: main.cpp
engine/core/include/efx/core/: config.hpp  ring_buffer.hpp  types.hpp
engine/core/src/: config.cpp  types.cpp
engine/gateway/include/efx/gateway/: questdb_writer.hpp  zmq_publisher.hpp
engine/gateway/src/: questdb_writer.cpp  zmq_publisher.cpp
engine/hedger/include/efx/hedger/: auto_hedger.hpp
engine/hedger/src/: auto_hedger.cpp
engine/market_data/include/efx/market_data/: simulator.hpp  venue_book.hpp
engine/market_data/src/: simulator.cpp  venue_book.cpp
engine/order/include/efx/order/: client_simulator.hpp  order_manager.hpp
engine/order/src/: client_simulator.cpp  order_manager.cpp
engine/pricing/include/efx/pricing/: client_pricer.hpp  fair_value.hpp  spread_constructor.hpp  volatility.hpp
engine/pricing/src/: client_pricer.cpp  fair_value.cpp  spread_constructor.cpp  volatility.cpp
engine/tests/: test_fair_value.cpp  test_spread.cpp  test_types.cpp
frontend/: package-lock.json
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/clients/: page.tsx
frontend/src/app/sdp/: page.tsx
frontend/src/components/dashboard/: alert-feed.tsx  analytics-insights.tsx  client-alpha-table.tsx  fair-value-monitor.tsx  header.tsx  nav.tsx  pnl-panel.tsx  positions-grid.tsx  price-tiles.tsx  session-indicator.tsx  trade-blotter.tsx  venue-board.tsx
frontend/src/hooks/: use-clients.ts  use-prices.ts  use-websocket.ts
frontend/src/types/: market.ts
gateway/: pyproject.toml
gateway/src/gateway/: config.py  db.py  main.py
gateway/src/gateway/api/: alpha.py  clients.py  health.py  pricing.py  sessions.py  simulation.py  tiers.py  trade.py
gateway/src/gateway/bridge/: engine_state.py  zmq_subscriber.py
gateway/src/gateway/ws/: prices.py
migrations/postgres/: init.sql
migrations/questdb/: init.sql
simulator/: pyproject.toml
