[project]
name = "analytics"
version = "0.1.0"
description = "EFX Analytics - PnL, alpha models, drawdown detection, volume tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pyzmq>=27.1.0",
    "questdb>=4.1.0",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics"]
