[project]
name = "gateway"
version = "0.1.0"
description = "EFX API Gateway - bridges C++ engine to frontend via REST + WebSocket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "pyzmq>=27.1.0",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
